Fixed disabled button on iOS

--- a/src/components/Delivery/SearchForm/SearchForm.module.scss
+++ b/src/components/Delivery/SearchForm/SearchForm.module.scss
@@ -76,6 +76,7 @@
     border: none;
     border-radius: 2px;
     color: $greyColor;
+    background-color: $greyColorSecondary;
     transition: $mainTransition;
 }
 
